# libqtdbusmock

./: CMakeLists.txt  README.md  build.sh  run.sh  run_on_device.sh
cmake/: Coverage.cmake  FindValgrind.cmake
data/: com.canonical.Unity.SystemDialog.xml  nm-device-wifi.xml  nm-device.xml  nm-manager-mock.xml  nm-manager.xml  notification-daemon-mock.xml  notifications-mock.xml  ofono-connectionmanager.xml  ofono-mock.xml  ofono-modem-mock.xml  ofono-networkregistration.xml  ofono-simmanager.xml  org.freedesktop.DBus.Properties.xml  org.freedesktop.URfkill.xml
debian/: changelog  control  copyright  libqtdbusmock1-dev.install  libqtdbusmock1.install  libqtdbusmock1.symbols  rules
libqtdbusmock/: CMakeLists.txt
libqtdbusmock/data/: nm-manager-mock.xml  org.freedesktop.DBus.Mock.xml
libqtdbusmock/src/: CMakeLists.txt
libqtdbusmock/src/libqtdbusmock/: CMakeLists.txt  DBusMock.cpp  DBusMock.h  Method.cpp  MethodCall.cpp  MethodCall.h  MockInterfaceClasses.h
libqtdbustest/: CMakeLists.txt
libqtdbustest/src/: CMakeLists.txt
libqtdbustest/src/libqtdbustest/: CMakeLists.txt  DBusService.cpp  DBusService.h  DBusTestRunner.cpp  DBusTestRunner.h  QProcessDBusService.cpp  QProcessDBusService.h
src/: CMakeLists.txt  InitGlib.cpp  InitGlib.h  Localisation.h  NetworkPrompt.cpp  NetworkPrompt.h  WiFiMenu.cpp  WiFiMenu.h  config.h.in  main.cpp
src/libqtdbusmock/: CMakeLists.txt  DBusMock.cpp  DBusMock.h  DeclareMetatypes.h  ExportInterfaces.h  Method.h  MethodCall.cpp  MethodCall.h  MockInterfaceClasses.h  NamedMethodCall.cpp  NamedMethodCall.h  config.h.in  libqtdbusmock.pc.in
templates/: CMakeLists.txt  org.freedesktop.hostname1.py  org.freedesktop.login1.py
tests/: CMakeLists.txt  DBusTest.cpp  DBusTest.h  MenuPrinter.cpp  TestNetworkPrompt.cpp  main.cpp
tests/data/: expectedMenuWithExistingConnection.txt  expectedMenuWithoutExistingConnection.txt  valgrind.suppression
tests/libqtdbusmock/: TestDBusMock.cpp
