
set(DATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data")
set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(SOURCE_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/src")
include_directories(${SOURCE_DIR})
include_directories(${SOURCE_BINARY_DIR})

add_subdirectory(src)

set(QTDBUSTEST_INCLUDE_DIRS
	${SOURCE_DIR}
	${SOURCE_BINARY_DIR}
	PARENT_SCOPE
)

set(QTDBUSTEST_LIBRARIES
	qtdbustest
	PARENT_SCOPE
)